# spectrum3mf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_PIPELINE.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
profiles/: u1_default.json
tests/integration/: test_croissant_conversion.py
tests/unit/: test_3mf_writer.py  test_color_math.py  test_mapping_stability.py  test_profiles.py
u1_pipeline_cli/: main.py
u1_pipeline_core/: __init__.py  asset_ingest.py  color_extract.py  color_math.py  compat_v094.py  conversion.py  geometry_guard.py  label_smooth.py  mesh_refine.py  mix_optimizer.py  presets.py  profile_manager.py  threemf_writer.py  types.py
u1_pipeline_web/: app.py
u1_pipeline_web/profiles/: active_profile.json  u1_default.json
